[gd_scene load_steps=25 format=1]

[ext_resource path="res://script/ready.gd" type="Script" id=1]
[ext_resource path="res://art/BG.png" type="Texture" id=2]
[ext_resource path="res://art/map4.png" type="Texture" id=3]
[ext_resource path="res://art/map3.png" type="Texture" id=4]
[ext_resource path="res://art/moon.png" type="Texture" id=5]
[ext_resource path="res://font/liliput_steps_72.fnt" type="BitmapFont" id=6]
[ext_resource path="res://art/Button/g11990.png" type="Texture" id=7]
[ext_resource path="res://art/Button/g12040.png" type="Texture" id=8]
[ext_resource path="res://art/Button/g4760-9.png" type="Texture" id=9]
[ext_resource path="res://art/Button/g4760-10.png" type="Texture" id=10]
[ext_resource path="res://art/Button/g10999.png" type="Texture" id=11]
[ext_resource path="res://art/Button/g11304.png" type="Texture" id=12]
[ext_resource path="res://art/Button/g13024.png" type="Texture" id=13]
[ext_resource path="res://art/Button/g11525.png" type="Texture" id=14]
[ext_resource path="res://art/Button/g115251.png" type="Texture" id=15]
[ext_resource path="res://art/Button/Pressed.png" type="Texture" id=16]
[ext_resource path="res://art/Button/g10641.png" type="Texture" id=17]
[ext_resource path="res://art/Button/g13952.png" type="Texture" id=18]
[ext_resource path="res://art/Button/g11264.png" type="Texture" id=19]

[sub_resource type="Animation" id=1]

resource/name = "run"
length = 5.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ground:region_rect")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 512, 128 ), Rect2( 1024, 0, 512, 128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Building BG:region_rect")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 512, 128 ), Rect2( 512, 0, 512, 128 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 262.307, 76.3155 )

[sub_resource type="Theme" id=3]


[sub_resource type="CanvasItemMaterial" id=4]

shader/shading_mode = 0

[sub_resource type="Animation" id=5]

resource/name = "menu_pop"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 314 ), Vector2( 200, 299 ), Vector2( 200, 314 ) ]
}

[node name="main" type="Node2D"]

transform/pos = Vector2( 0, 6 )
script/script = ExtResource( 1 )
score = 0
playing = false
toogle_bat = false
toogle_tube = false
toogle_coin = false

[node name="ground" type="Node2D" parent="."]

editor/display_folded = true

[node name="Main BG" type="Sprite" parent="ground"]

transform/pos = Vector2( 204.738, 261.87 )
transform/scale = Vector2( 0.918715, 4.63942 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 512, 0, 512, 128 )

[node name="Building BG" type="Sprite" parent="ground"]

transform/pos = Vector2( 252.289, 479.464 )
texture = ExtResource( 3 )
region = true
region_rect = Rect2( 0, 0, 512, 128 )

[node name="ground" type="Sprite" parent="ground"]

transform/pos = Vector2( 0, 542.523 )
texture = ExtResource( 4 )
centered = false
region = true
region_rect = Rect2( 0, 0, 512, 128 )

[node name="Astronomic" type="Sprite" parent="ground"]

transform/pos = Vector2( 205.95, 288.643 )
transform/scale = Vector2( 0.36904, 0.36904 )
texture = ExtResource( 5 )

[node name="anim" type="AnimationPlayer" parent="ground"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/run = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "run"

[node name="static" type="Area2D" parent="ground"]

input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 242.58, 602.861 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="col" type="CollisionShape2D" parent="ground/static"]

transform/pos = Vector2( 242.58, 602.861 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="label" type="Label" parent="."]

anchor/right = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 142.0
margin/right = -742.0
margin/bottom = 1102.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 4
text = "-NIGHT-
*/TAP/*"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LOGO" type="Label" parent="."]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = -6.0
margin/right = -309.0
margin/bottom = 662.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.898438, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 4
text = "Flappy
		Godot"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label1" type="Label" parent="."]

anchor/right = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 264.0
margin/right = -742.0
margin/bottom = 560.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 4
text = "Normal Mode"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Play" type="TextureButton" parent="."]

rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 3 )
margin/left = 164.0
margin/top = 266.0
margin/right = 464.0
margin/bottom = 566.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Option" type="TextureButton" parent="."]

rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 3 )
margin/left = 81.0
margin/top = 543.0
margin/right = 381.0
margin/bottom = 844.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Ladder" type="TextureButton" parent="."]

rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 3 )
margin/left = 20.0
margin/top = 549.0
margin/right = 320.0
margin/bottom = 777.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Exit" type="TextureButton" parent="."]

rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 3 )
margin/left = 321.0
margin/top = 514.0
margin/right = 621.0
margin/bottom = 816.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Mode" type="TextureButton" parent="."]

editor/display_folded = true
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 3 )
margin/left = 129.0
margin/top = 376.0
margin/right = 429.0
margin/bottom = 505.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
textures/pressed = ExtResource( 15 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Mode"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 41.0
margin/top = 36.0
margin/right = 353.0
margin/bottom = 107.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0745098, 0.435294, 0.0509804, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Change"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Next" type="TextureButton" parent="."]

rect/rotation = 180.0
rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 319.0
margin/top = 531.0
margin/right = 552.0
margin/bottom = 779.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Prev" type="TextureButton" parent="."]

rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 468.0
margin/right = 313.0
margin/bottom = 716.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 17 )
textures/pressed = ExtResource( 16 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Menu" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 200, 304 )
transform/scale = Vector2( 0.250523, 0.284747 )
texture = ExtResource( 18 )

[node name="Polygon2D" type="Polygon2D" parent="Menu"]

visibility/opacity = 0.35
visibility/behind_parent = true
transform/pos = Vector2( -6.40283, -17.5596 )
transform/scale = Vector2( 39.5964, 52.6783 )
polygon = Vector2Array( -21.0081, -24, 21.3315, -24, 20.3234, 22.6667, -21.0081, 22.6667 )
uv = Vector2Array(  )
color = Color( 0.0113525, 0.0797794, 0.121094, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="username" type="LineEdit" parent="Menu"]

rect/scale = Vector2( 0.8, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -319.0
margin/top = -35.0
margin/right = 461.0
margin/bottom = 71.0
custom_fonts/font = ExtResource( 6 )
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="LOGO1" type="Label" parent="Menu"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -279.0
margin/top = -171.0
margin/right = 490.0
margin/bottom = -51.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.974625, 0.976563, 0.957489, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 4
text = "New User"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Menu"]

material/material = SubResource( 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -200.0
margin/top = 110.0
margin/right = 199.0
margin/bottom = 187.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Submit"
flat = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/menu_pop = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "menu_pop"

[node name="change" type="Sprite" parent="."]

transform/pos = Vector2( 200, 304 )
transform/scale = Vector2( 0.250523, 0.284747 )
texture = ExtResource( 18 )

[node name="Polygon2D" type="Polygon2D" parent="change"]

visibility/opacity = 0.35
visibility/behind_parent = true
transform/pos = Vector2( 0, -40.84 )
transform/scale = Vector2( 39.5964, 52.6783 )
polygon = Vector2Array( -21.0081, -24, 21.3315, -24, 20.3234, 22.6667, -21.0081, 22.6667 )
uv = Vector2Array(  )
color = Color( 0.0113525, 0.0797794, 0.121094, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="nusername" type="LineEdit" parent="change"]

rect/scale = Vector2( 0.8, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -319.0
margin/top = -35.0
margin/right = 461.0
margin/bottom = 71.0
custom_fonts/font = ExtResource( 6 )
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="LOGO2" type="Label" parent="change"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -279.0
margin/top = -171.0
margin/right = 490.0
margin/bottom = -51.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.974625, 0.976563, 0.957489, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 4
text = "Change Name"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Buttonb" type="Button" parent="change"]

material/material = SubResource( 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -200.0
margin/top = 110.0
margin/right = 199.0
margin/bottom = 187.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Submit"
flat = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="change"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/menu_pop = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "menu_pop"

[node name="label2" type="Label" parent="."]

anchor/right = 1
rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 130.0
margin/top = 554.0
margin/right = -872.0
margin/bottom = 850.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 4
text = "Normal Mode"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureButton" type="TextureButton" parent="."]

rect/scale = Vector2( 0.35, 0.35 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 290.0
margin/top = 544.0
margin/right = 590.0
margin/bottom = 673.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 19 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="TextureButton"]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 29.0
margin/top = 48.0
margin/right = 609.0
margin/bottom = 134.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.0823975, 0.421875, 0.119528, 1 )
text = "Change User"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_enter" from="ground/static" to="." method="kill_ground"]

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="Option" to="." method="_on_Option_pressed"]

[connection signal="pressed" from="Ladder" to="." method="_on_Ladder_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]

[connection signal="pressed" from="Mode" to="." method="_on_Mode_pressed"]

[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]

[connection signal="pressed" from="Prev" to="." method="_on_Previous_pressed"]

[connection signal="pressed" from="Menu/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="change/Buttonb" to="." method="_on_Buttonb_pressed"]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]


